# oops-dbus

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  build.sh  index.html  package-lock.json  package.json  remote-connection-mockup.html  resources.qrc  run-dev.sh  tailwind.config.js  test-remote.mjs  tsconfig.json  vite.config.ts
dbus-workbench-electron/: .eslintrc.cjs  .npmrc  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  index.html  run-dev.sh  tailwind.config.js  tsconfig.node.json
dbus-workbench-electron/electron/: main.ts  preload.ts
dbus-workbench-electron/electron/dbus/: MethodInvoker.ts  PropertyAccessor.ts  ServiceExplorer.test.ts  ServiceExplorer.ts  types.ts
dbus-workbench-electron/electron/ipc/: index.ts  types.ts
dbus-workbench-electron/src/: index.css
dbus-workbench-electron/src/hooks/: useMethodInvoker.ts  useServiceExplorer.ts  useServiceIntrospection.ts  useSignalMonitor.ts
dbus-workbench-electron/src/ipc/: ipcClient.ts
dbus-workbench-electron/src/lib/: buildTree.ts  dbusSignature.ts  memberLabel.test.ts  memberLabel.ts
dbus-workbench-electron/src/types/: electron-api.ts  electron.d.ts
dbus_workbench_flutter/: pubspec.yaml
dbus_workbench_flutter/lib/: main.dart
dbus_workbench_flutter/lib/models/: argument_info.dart  dbus_interface_info.dart  dbus_member_info.dart  dbus_service_info.dart  signal_event.dart  tree_node.dart
dbus_workbench_flutter/lib/providers/: app_state.dart
dbus_workbench_flutter/lib/screens/: home_screen.dart
dbus_workbench_flutter/lib/services/: dbus_service.dart
dbus_workbench_flutter/lib/theme/: app_theme.dart
dbus_workbench_flutter/lib/widgets/: bottom_panel.dart  browse_pane.dart  property_detail_pane.dart  service_tree_pane.dart  signal_detail_pane.dart  workbench_pane.dart
dbus_workbench_flutter/linux/: CMakeLists.txt
dbus_workbench_flutter/linux/runner/: my_application.cc
dbus_workbench_flutter/test/: widget_test.dart
debian/: control
docs/: electron-rewrite-design.md  ui-preview.html
docs/superpowers/specs/: 2026-05-21-service-pane-design.md  mockup-full-layout.html  mockup-service-overview.html
electron/: main.ts  preload.ts
electron/dbus/: DBusTypes.ts  MethodInvoker.ts  RemoteDBusExplorer.test.ts  RemoteDBusExplorer.ts  ServiceExplorer.test.ts  ServiceExplorer.ts  SignalMonitor.ts  types.ts
electron/ipc/: index.ts  methodInvoker.ts  propertyAccessor.ts  serviceExplorer.ts  signalMonitor.ts  ssh.ts
electron/ssh/: ConnectionStore.ts  TunnelManager.ts  ssh2.d.ts  types.ts
electron/utils/: logger.ts
qml/: Main.qml
qml/components/: AppTopBar.qml  BottomPanel.qml  BrowsePane.qml  PropertyDetailPane.qml  SegmentedToggle.qml  ServiceTreePane.qml  SignalDetailPane.qml  SurfaceCard.qml  Theme.qml  Toast.qml  WindowButton.qml  WorkbenchPane.qml
scripts/: build-uos-deb.sh
src/: App.tsx  index.css  main.cpp
src/components/common/: MonitoringCommands.tsx
src/components/explorer/: MemberTree.tsx  ServiceTree.tsx  TreeNode.tsx
src/components/layout/: AppShell.tsx  BottomPanel.tsx  Sidebar.tsx  TopBar.tsx
src/components/property/: PropertyPane.tsx
src/components/remote/: ConnectionCard.tsx  ConnectionDialog.tsx  RemoteDrawer.tsx
src/components/service/: PathPane.tsx  (+2 more)
src/dbus/: DBusManager.cpp  DBusManager.h  MethodInvoker.cpp  MethodInvoker.h  ServiceExplorer.cpp  ServiceExplorer.h  SignalMonitor.cpp  SignalMonitor.h
src/hooks/: usePropertyAccessor.ts
src/i18n/: index.ts
src/ipc/: channels.ts  ipcClient.ts
src/lib/: buildTree.ts  memberLabel.test.ts
src/stores/: appStore.ts  connectionStore.ts  settingsStore.ts
src/types/: electron-api.ts
tests/: test_argumentmodel.cpp  test_membermodel.cpp  test_serviceexplorer.cpp
(+23 files in other folders)
